--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@
 
 nav {
   padding: 0.2rem 0;
-  margin-bottom: 1rem;
+  margin-top: 1rem;
+  margin-bottom: 2rem;
 }
 html {
   font-family: 'Noto Sans KR', sans-serif;
