--- a/style.css
+++ b/style.css
@@ -204,3 +204,10 @@ img {
   font-weight: 600;
   margin: 0.25em 0.1em;
 }
+
+article iframe {
+  width: 100%;
+}
+article h2 {
+  margin-bottom: 1rem;
+}
