--- a/style.css
+++ b/style.css
@@ -64,19 +64,11 @@
   padding: 0;
 }
 
-nav {
-  padding: 0.2rem 0;
-  margin-top: 1rem;
-  margin-bottom: 2rem;
-}
 html {
   font-family: 'Noto Sans KR', sans-serif;
   font-size: 16px;
   background: black;
   color: white;
-}
-body {
-  margin: 0;
 }
 div,
 section,
@@ -125,10 +117,13 @@ h1 {
 .visible {
   opacity: 1;
 }
+/* .invisibleing {
+  opacity: 0;
+} */
 
 .img-item.visible img {
   transition: all 3s ease;
-  transform: scale(1.02);
+  transform: scale(1.03);
 }
 .scene-img {
   max-height: 100vh;
@@ -210,4 +205,76 @@ article iframe {
 }
 article h2 {
   margin-bottom: 1rem;
+}
+nav {
+  padding: 0.2rem 0;
+  margin-top: 1rem;
+  margin-bottom: 2rem;
+}
+.container-load-resource {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: black;
+  z-index: 0;
+}
+.pr {
+  position: relative;
+}
+.part1 {
+  /* width: 1920px;
+  height: 1080px; */
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+  background-image: url(/assets/part1.4b213258.png);
+  background-repeat: no-repeat;
+  background-position: center 0;
+  background-size: cover;
+}
+
+.part1 video {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+  object-fit: cover;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 1;
+}
+
+.part1 .video_bg {
+  width: 100%;
+  height: 100%;
+  left: 0;
+  bottom: 0;
+  z-index: 2;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.container-video {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+}
+.pa {
+  position: absolute;
+}
+.container-title {
+  position: absolute;
+  z-index: 10;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.container-first-text {
+  margin-top: 10rem;
 }
